macros/tests/compile_fail/package_name_string.stderr
error: [melbi] name must be an identifier
 --> tests/compile_fail/package_name_string.rs:5:24
  |
5 | #[melbi_package(name = "good_pkg")]
  |                        ^^^^^^^^^^
